@@ -1,5 +1,12 @@
 2004-12-11  Shaun McCance  <shaunm@gnome.org>
 
+	* src/yelp-db-pager.c:
+	* src/yelp-man-pager.c:
+	* src/yelp-man-pager.h:
+	- Made yelp-man-pager use yelp-xslt-pager
+
+2004-12-11  Shaun McCance  <shaunm@gnome.org>
+
 	* src/Makefile.am:
 	* src/yelp-db-pager.c:
 	* src/yelp-db-pager.h:
